One modue completed

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -4,6 +4,7 @@
   "features": ["EnableSetPasswordInApi"],
   "settings": {
     "lightningExperienceSettings": {
+      "enableLightningPreviewPref": true,
       "enableS1DesktopEnabled": true
     },
     "mobileSettings": {
